--- a/Hometask2/appsettings.json
+++ b/Hometask2/appsettings.json
@@ -5,6 +5,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.AspNetCore.HttpLogging.HttpLoggingMiddleware": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
